[package]
name = "viticulture"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
rand = { version = "0.9.2" }
#serde = { version = "1.0", features = ["derive"] }
#tokio = { version = "1.0", features = ["full"] }
#renet = "0.0.13"  # For networking

#[target.'cfg(target_os = "windows")'.dependencies]
#winapi = "0.3"

#[target.'cfg(target_os = "macos")'.dependencies]
#cocoa = "0.24"

#[target.'cfg(target_os = "linux")'.dependencies]
#x11 = "2.19"